# synth_strategy

./: .gitignore  LICENSE  config.yaml  pyproject.toml  readme.md  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
data/patterns/: chemical_rings_smiles.json  functional_groups.json  smirks.json
data/prompts/: route_schema.json  strategy_extraction.py
data/strategy_function_library/: code_02.py  code_10000.py  code_10012.py  code_10042.py  code_10068.py  code_10074.py  code_10079.py  code_10084.py  code_10085.py  code_10092.py  code_10097.py  code_1010.py  code_10122.py  code_10124.py  code_10136.py  code_10147.py  code_10152.py  code_10155.py  code_10162.py  code_10167.py  code_10171.py  code_10173.py  code_10208.py  code_1021.py  code_10213.py  code_10228.py  code_10242.py  code_10244.py  code_10245.py  code_10264.py  code_10284.py  code_10294.py  code_10296.py  code_10304.py  code_10316.py  code_10326.py  code_10335.py  code_10350.py  code_10353.py  code_10373.py  (+1051 more)
data/test/: test_route.json
results/: annotated_routes.json  clustering_results.json
scripts/: 01_run_function_generation.sh  02_extract_functions_from_json.py  03_run_filtering_pipeline.py  annotate_and_cluster_local.sh  download_uspto_data.py  run_on_data.py  submit_annotation_jobs.sh  submit_clustering_job.sh  visualise_clustering_results.py  visualise_retrieval_results.py
src/functions/: split_multifile.sh
src/functions/py_functions/: f_03.py  f_04.py  f_05.py  f_06.py  f_07.py  f_08.py  f_10.py  f_100.py  f_1000.py  f_1001.py  f_1002.py  f_1004.py  f_1005.py  f_1006.py  f_1007.py  f_1008.py  f_101.py  f_1011.py  f_1012.py  f_1013.py  f_1015.py  f_1016.py  f_1017.py  f_1018.py  f_1019.py  f_102.py  f_1020.py  f_1022.py  f_1023.py  f_1024.py  f_1025.py  f_1026.py  f_1027.py  f_1029.py  f_1031.py  f_1033.py  f_1037.py  f_1038.py  f_1039.py  f_104.py  (+2585 more)
src/steerable_retro/: api.py  evaluate.py  logger.py  version.py
src/steerable_retro/llm/: __init__.py  llm_router.py  llm_utils.py  onestep.py  self_iteration.py  sequential.py  synthesis_tree.py
src/steerable_retro/llm/prompts/: code_rewriting.py  code_rewriting_cod.py  code_rewriting_sparse_cod.py  json_schema.py  rdkit_docs.py  rewriting_old.py  rewriting_prep.py  strategy_extraction.py
src/steerable_retro/lm_code/: __init__.py  code_00.py  code_01.py  code_02.py  code_03.py  code_04.py  code_05.py  code_06.py  code_07.py  code_08.py  code_09.py  code_1.py  code_10.py  code_100.py  code_1000.py  code_1001.py  code_1002.py  code_1003.py  code_1004.py  code_1005.py  code_1006.py  code_1007.py  code_1008.py  code_1009.py  code_101.py  code_1010.py  code_1011.py  code_1012.py  code_1013.py  code_1014.py  code_1015.py  code_1016.py  code_1017.py  code_1018.py  code_1019.py  code_102.py  code_1020.py  code_1021.py  code_1022.py  code_1023.py  (+3194 more)
src/steerable_retro/models/: __init__.py  base_embedder.py  gemini_embedder.py  scibert_embedder.py
src/steerable_retro/retrieval/: llm_analysis.py  retriever.py  strategy_retriever.py
src/steerable_retro/tree_lstm/: data.py  inference.py  models.py  optim.py  train.py
src/steerable_retro/utils/: __init__.py  check.py  chemical_rings_list.py  fuzzy_dict.py  llm_utils.py  rxnimg.py
src/synth_strategy/: api.py  cli.py  config.py  evaluate.py  logger.py  notebooks.py  quick.py  test.py  visualization.py
src/synth_strategy/clustering/: clustering.py
src/synth_strategy/llm/: __init__.py  function_database_extraction.py  function_filtering.py  function_generation.py  function_return_modification.py  llm_utils.py  refactor.py  synthesis_tree.py
src/synth_strategy/llm/prompts/: code_rewriting.py  code_rewriting_cod.py  function_filtering.py  gemini_pro_filtering.py  query_rewriting.py  rdkit_docs.py  route_schema.json  strategy_extraction.py
src/synth_strategy/models/: __init__.py  base_embedder.py  huggingface_embedder.py  openai_embedder.py  sentence_transformer_embedder.py
src/synth_strategy/retrieval/: llm_analysis.py  retriever.py
src/synth_strategy/route_annotation/: annotation.py
src/synth_strategy/utils/: __init__.py  check.py  chemical_rings_list.py  fuzzy_dict.py  llm_utils.py  rxnimg.py
tests/: __init__.py  test_modules.py  test_version.py
