# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "synth-strategy"
version = "0.1.0"
description = "Synthetic Strategy Function Pipeline for Retrosynthesis"
authors = [{name = "SynthStrategy Team"}]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "plotly>=5.0.0",
    "ipywidgets>=7.6.0",
    "aizynthfinder>=4.0.0",
    "rdkit>=2022.03.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
synth-strategy = "synth_strategy.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true
