##########################
# Setup.py Configuration #
##########################
[metadata]
name = steerable_retro
version = 0.0.1
description = Steerable retrosynthesis with LLM
long_description = Agentic workflow for describing retrosynthesis routes strategically. Applications in strategic and steerable retrosynthetic planning.
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/schwallergroup/steerable_retro
download_url = https://github.com/schwallergroup/steerable_retro/releases
project_urls =
    Tracker = https://github.com/schwallergroup/steerable_retro/issues
    Source = https://github.com/schwallergroup/steerable_retro
    Documentation = https://steerable_retro.readthedocs.io

# Author information
author = Andres M Bran
author_email = andres.marulandabran@epfl.ch
maintainer = Andres M Bran
maintainer_email = andres.marulandabran@epfl.ch

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    chemistry
    ai
    ml
    deep-learning
    # TODO add your own free-text keywords

[options]
install_requires =
    tox
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    openai
    python-dotenv
    requests
    cairosvg
    litellm==1.51.3
    pydantic
    pandas
    # weave
    # aizynthfinder


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    steerable_retro = steerable_retro.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = steerable_retro
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/steerable_retro
    .tox/*/lib/python*/site-packages/steerable_retro

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

