##########################
# Setup.py Configuration #
##########################
[metadata]
# --- Core Package Identity ---
name = synth_strategy
version = 0.1.0
description = A framework for analyzing and applying retrosynthesis strategies.
long_description = file: README.md
long_description_content_type = text/markdown

# --- Project URLs (Update these with your repository details) ---
url = https://github.com/your_username/synth_strategy
download_url = https://github.com/your_username/synth_strategy/releases
project_urls =
    Tracker = https://github.com/your_username/synth_strategy/issues
    Source = https://github.com/your_username/synth_strategy
    Documentation = https://synth_strategy.readthedocs.io

# --- Author Information (Update with your details) ---
author = Daniel Armstrong
author_email = daniel.armstrong@epfl.ch
maintainer = Daniel Armstrong
maintainer_email = daniel.armstrong@epfl.ch

# --- License Information ---
license = MIT
license_files =
    LICENSE

# --- PyPI Classifiers (for package searching and categorization) ---
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence

# --- Keywords for PyPI ---
keywords =
    retrosynthesis
    chemistry
    synthesis planning
    strategy
    ai
    cheminformatics

[options]
# --- Core Dependencies ---
install_requires =
    # Command line interface
    click
    more_click
    # Progress bars
    tqdm
    # Scientific and data handling
    pandas
    # Chemistry and retrosynthesis
    aizynthfinder
    # LLM and API interaction
    openai
    python-dotenv
    networkx
    requests
    litellm==1.51.3
    sentence-transformers
    transformers
    # Data validation and utilities
    pydantic
    more_itertools
    # Visualization (optional but often useful)
    cairosvg
    weave
    aiofiles
    colorama

# --- Package Structure ---
zip_safe = false
include_package_data = True
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

# --- Optional Dependencies (for developers) ---
[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi

# --- Command-Line Entry Point ---
[options.entry_points]
console_scripts =
    synth_strategy = synth_strategy.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = synth_strategy
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/synth_strategy
    .tox/*/lib/python*/site-packages/synth_strategy

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

######################
# Tox Configuration  #
######################
[tox]
isolated_build = True
envlist =
    coverage-clean
    lint
    mypy
    doc8
    docstr-coverage
    py
    coverage-report

[testenv]
description = Run tests with coverage
passenv =
    # Pass API keys for integration tests if needed
    OPENAI_API_KEY
    ANTHROPIC_API_KEY
extras =
    tests
commands =
    coverage run -p -m pytest --durations=20 {posargs:tests}

[testenv:coverage-clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:lint]
description = Run code formatters and linters
deps =
    black[jupyter]
    isort
    nbqa
skip_install = true
commands =
    black .
    isort .
    nbqa isort .

[testenv:mypy]
description = Run static type checking
deps = mypy
skip_install = true
# Target the specific package directory for precision
commands = mypy --install-types --non-interactive --ignore-missing-imports src/synth_strategy/

[testenv:doc8]
description = Check RST file style in documentation
skip_install = true
deps =
    sphinx
    doc8
commands =
    doc8 docs/source/

[testenv:docstr-coverage]
description = Check documentation coverage percentage
skip_install = true
deps = docstr-coverage
commands =
    docstr-coverage src/synth_strategy/ tests/ --skip-private --skip-magic --fail-under=70 --skip-init --skip-class-def

[testenv:docs]
description = Build the documentation
extras = docs
commands =
    sphinx-build -W -b html -d docs/build/doctrees docs/source docs/build/html

[testenv:coverage-report]
description = Combine and report on test coverage
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report

####################
# Deployment tools #
####################
[testenv:build]
description = Build the wheel and source distribution
skip_install = true
deps =
    wheel
    build
commands =
    python -m build --sdist --wheel --no-isolation

[testenv:release]
description = Release the code to PyPI
skip_install = true
deps =
    {[testenv:build]deps}
    twine >= 1.5.0
commands =
    {[testenv:build]commands}
    twine upload --skip-existing dist/*